# ai-xspan-test

./: .dockerignore  .env.example  .gitignore  Agentic RAG Assignment.docx  Dockerfile  README.md  app.py  design_notes.md  docker-compose.yml  main.py  pyproject.toml  uv.toml
data/kb/: Attention Is All You Need_chunks.json
scripts/: entrypoint.sh  ingest_papers.py
src/: main.py
src/agent/: graph.py  nodes.py  prompts.py  state.py
src/ingest/: embedder.py  indexer.py  pdf_parser.py
src/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
src/tools/: calculator_tool.py  citation_tool.py  retriever_tool.py
